--- a/Local-Turistico/index.html
+++ b/Local-Turistico/index.html
@@ -4,6 +4,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local Turístico</title>
@@ -11,53 +14,54 @@
 </head>
 <body>
     <header>
-        <p>Sua próxima viagem:</p>
+        <p class="emphasis">Sua próxima viagem:</p>
         <h1>Conheça Busan</h1>
         <img src="assets/image.jpg" alt="">
         <p>Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</p>
     </header>
+    <hr>
     <main>
         <section id="introdution">
-            <p>Para os amantes de história</p>
+            <p class="emphasis">Para os amantes de história</p>
             <h2>Descubra 3 destinos imperdíveis em Busan</h2>
             <p>
                 As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
                 Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.
             </p>
         </section>
-        <section id="Templo-Haedong-Yonggungsa">
+        <section id="templo-haedong-yonggungsa">
             <img src="assets/haedong.jpg" alt="">
             <h3>1. Templo Haedong Yonggungsa</h3>
             <p>
-                O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. 
+                O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. <br><br>
+                <span class="recomendations">Bom para:</span>
             </p>
-            <p>Bom para:</p>
             <ul>
-                <li><a href="">História</a></li>
+                <li class="history marks">História</li>
             </ul>
         </section>
-        <section id="Tempo-Beomeo-Sa">
+        <section id="tempo-beomeo-sa">
             <img src="assets/beomeo.jpg" alt="">
             <h3>2. Templo Beomeo-sa</h3>
             <p>
-                O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.
+                O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.<br><br>
+                <span class="recomendations">Bom para:</span>
             </p>
-            <p>Bom para:</p>
             <ul>
-                <li>História</li>
+                <li class="history marks">História</li>
             </ul>
         </section>
-        <section id="Parque-Yongdusan">
+        <section id="parque-yongdusan">
             <img src="assets/yongdusan.jpg" alt="">
             <h3>Parque Yongdusan</h3>
             <p>
-                O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.
+                O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats. <br><br>
+                <span class="recomendations">Bom para:</span>
             </p>
-            <p>Bom para:</p>
             <ul>
-                <li>Casais</li>
-                <li>Famílias</li>
-                <li>Orçamento</li>
+                <li id="couples" class="marks">Casais</li>
+                <li id="families" class="marks">Famílias</li>
+                <li id="budget" class="marks">Orçamento</li>
             </ul>
         </section>
     </main>
@@ -65,7 +69,7 @@
         As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. 
     </p>
     <footer>
-        Feito com ?? pela Rocketseat
+        Feito com <img src="assets/ph_heart-fill.svg" alt=""> pela Rocketseat
     </footer>
 </body>
 </html>
